import --enable-preview from gradle (IDEA-226845)
intellij-monorepo: a8f14fd917558c0e63e33329af6269708a0e0271